<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.mycompany</groupId>
        <artifactId>ProyectoRestaurante</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>Negocio</artifactId>
    <packaging>jar</packaging>

    <dependencies>
        
        <dependency>
            <groupId>com.mycompany</groupId>
            <artifactId>Dominio</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

      
        <dependency>
            <groupId>com.mycompany</groupId>
            <artifactId>DTOs</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>Persistencia</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <exec.mainClass>com.mycompany.negocio.Negocio</exec.mainClass>
    </properties>

</project>